--- a/app/src/main/res/layout/fragment_crear_clase.xml
+++ b/app/src/main/res/layout/fragment_crear_clase.xml
@@ -21,38 +21,39 @@
 
     <TextView
         android:id="@+id/textNombre"
-        android:layout_width="wrap_content"
+        android:layout_width="85dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
         android:layout_marginTop="32dp"
         android:text="Nombre: "
+        android:textAlignment="textEnd"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textNuevaClase" />
 
     <EditText
         android:id="@+id/etNombre_CC"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="250dp"
+        android:layout_height="52dp"
         android:ems="10"
         android:inputType="textPersonName"
-        android:hint="Nombre"
         app:layout_constraintBottom_toBottomOf="@+id/textNombre"
         app:layout_constraintStart_toEndOf="@+id/textNombre"
         app:layout_constraintTop_toTopOf="@+id/textNombre" />
 
     <TextView
         android:id="@+id/textDescripcion"
-        android:layout_width="wrap_content"
+        android:layout_width="85dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
         android:text="Descripción: "
+        android:textAlignment="textEnd"
         app:layout_constraintStart_toStartOf="@+id/textNombre"
         app:layout_constraintTop_toBottomOf="@+id/textNombre" />
 
     <EditText
         android:id="@+id/etDescripcion_CC"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="250dp"
+        android:layout_height="52dp"
         android:ems="10"
         android:inputType="textPersonName"
         app:layout_constraintBottom_toBottomOf="@+id/textDescripcion"
